--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
     "axios": "^1.3.2",
     "react": "18.2.0",
     "react-native": "0.71.2",
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.19.0",
     "react-native-svg": "^13.8.0"
   },
   "devDependencies": {
