--- a/package.json
+++ b/package.json
@@ -1,46 +1,36 @@
 {
   "name": "awesome-project",
-  "version": "0.0.1",
-  "private": true,
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "npx react-native start",
-    "test": "jest",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
     "prettifier": "npx prettier -w ."
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
-    "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
-    "@react-navigation/stack": "^6.3.12",
     "@reduxjs/toolkit": "^1.9.2",
-    "axios": "^1.3.2",
-    "react": "18.2.0",
-    "react-native": "0.71.2",
-    "react-native-gesture-handler": "^2.9.0",
+    "axios": "^1.3.3",
+    "expo": "^47.0.13",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-paper": "^5.2.0",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.19.0",
-    "react-native-svg": "^13.8.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "3.18.0",
+    "react-native-svg": "13.4.0",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "babel-jest": "^29.2.1",
-    "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.73.7",
-    "prettier": "^2.4.1",
-    "react-test-renderer": "18.2.0"
+    "@babel/core": "^7.12.9",
+    "prettier": "^2.4.1"
   },
-  "jest": {
-    "preset": "react-native"
-  }
+  "private": true
 }
