--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "java.compile.nullAnalysis.mode": "automatic",
   "search.exclude": {
-    "**/node_modules": false
+    "**/node_modules": false,
+    "**/android": true
   }
 }
